# mpp_sdk

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  AUDIT_FOR_JUNE.md  AUDIT_FOR_SEPTEMBER.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  TODO.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: auto-assign.yml  ci.yml  docs.yml  entregables.yml  firmware.yml  hardware.yml  markdownlint.yml
algorithms/fuzzy_logic/: index.html
algorithms/incremental_conductance/: index.html
algorithms/particle_swarm/: index.html
algorithms/perturb_observe/: index.html
algorithms/restart_policy/: index.html
algorithms/scan_and_track/: index.html
data/plecs/: README.md  iv_1000_1000.csv  iv_1000_300.csv
design_sepic/: sepic3.py
design_sepic/LTspice/: sepic_20W_3.asc  sepic_20W_3.plt
docs/: general_information.md  index.md  methodology.md  rationale.md
docs/algorithms/: fuzzy_logic.md  incremental_conductance.md  particle_swarm.md  perturb_observe.md  restart_policy.md  scan_and_track.md
entregables/: gen_pdfs.py
entregables/03_06_26/: riesgos.md
entregables/10_05_26/: foda.md  roadmap.md
entregables/22_06_26/: anteproyecto.md  gen_pptx.py
entregables/29_05_26/: planificacion.md
entregables/minutas/: 01_06_26.html  22_06_26.html
entregables/paper/: 24_05_26_abstract.md  references.bib
examples/: pno_demo.py  pvlib_demo.py
firmware/: Cargo.toml  README.md
firmware/esp32c3-bpw34/: Cargo.toml  README.md
firmware/pipico_board/: Cargo.toml  README.md
firmware/pipico_board/.cargo/: config.toml
firmware/pipico_board/src/: ina229.rs  main.rs  max31865.rs  spi_slave_pio.rs
firmware/src/: main.rs
general_information/: index.html
hardware/: Pico.kicad_sch  Proyecto0.1V.kicad_pcb  Proyecto0.1V.kicad_pro  Proyecto0.1V.kicad_sch  SepicConverter.kicad_sch  analog_converters.kicad_sch  sepic_converter.kicad_sch  supplies.kicad_sch  untitled.kicad_sch
hardware/Custom_Library.pretty/: Toroidal_Inductor_28x32.kicad_mod  UTN_LOGO.kicad_mod  logo_Grupo.kicad_mod
hardware/jlcpcb/: project.db
harness/: animate.py  common.py  compare.py  compare_bank.py  compare_cyclic.py  compare_dynamic.py  compare_noise.py  compare_rescan.py  compare_seeds.py  compare_static.py  panel_config.py  snapshot.py
improve/: README.md
mpp_sdk/: __init__.py  metrics.py  visualization.py
mpp_sdk/algorithms/: __init__.py  base.py  fuzzy.py  incremental_conductance.py  particle_swarm.py  perturb_observe.py  restart.py  scan_and_track.py
mpp_sdk/converters/: __init__.py  boost.py  sepic.py
mpp_sdk/io/: __init__.py  base.py  dynamic.py  noisy.py  simulated.py  spi_mcu.py
mpp_sdk/models/: __init__.py  base.py  ideal.py  pvlib_adapter.py  string.py  tabulated.py
plecs/: MPPT_SERIE_PyO.plecs
pr-preview/pr-13/: 404.html
pr-preview/pr-14/: sitemap.xml
pr-preview/pr-16/: index.html
pr-preview/pr-19/: sitemap.xml
pr-preview/pr-21/: sitemap.xml
pr-preview/pr-23/: 404.html
pr-preview/pr-26/: sitemap.xml
pr-preview/pr-31/: index.html
pr-preview/pr-35/: sitemap.xml
rationale/: index.html
scripts/: export_iv_plecs.py  spi_test.py
search/: search_index.json
tests/: test_fuzzy.py  test_harness_common.py  test_harness_cyclic.py  test_incond.py  test_metrics.py  test_noisy.py  test_particle_swarm.py  test_perturb_observe.py  test_pvlib_model.py  test_restart.py  test_scan_and_track.py  test_smoke.py  test_sources.py  test_string.py  test_tabulated.py
(+72 files in other folders)
