[package]
name = "mpp-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.2"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1"
portable-atomic = { version = "1", features = ["critical-section"] }

defmt = "1.1.0"
defmt-rtt = "1.0"

# RGB8 for embassy-rp's vendored PioWs2812 driver (transitive via
# embassy-rp, needs to be a direct dep to name the type).
smart-leds = "0.4.0"

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"

[profile.dev]
debug = 2
opt-level = "s"
